[gd_scene load_steps=3 format=3 uid="uid://bqxvxb8ixqxqx"]

[ext_resource type="Script" uid="uid://bx4hb7n5miuxp" path="res://scripts/Main.gd" id="1_0hdqx"]
[ext_resource type="PackedScene" uid="uid://sh46uhnpglo" path="res://scenes/Player.tscn" id="2_1hdqy"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0hdqx")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 480.0
offset_bottom = 854.0
color = Color(0.6, 0.75, 0.9, 1)

[node name="Player" parent="." instance=ExtResource("2_1hdqy")]
position = Vector2(240, 750)

[node name="StarSpawner" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="AudioPlayers" type="Node" parent="."]

[node name="StarCollectSound" type="AudioStreamPlayer" parent="AudioPlayers"]

[node name="SpecialStarSound" type="AudioStreamPlayer" parent="AudioPlayers"]

[node name="GameOverSound" type="AudioStreamPlayer" parent="AudioPlayers"]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="AudioPlayers"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = -20.0
theme_override_font_sizes/font_size = 24
text = "Score: 0"

[node name="LivesLabel" type="Label" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_font_sizes/font_size = 24
text = "Lives: 3"
horizontal_alignment = 2

[node name="GameOverPanel" type="Panel" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0

[node name="GameOverLabel" type="Label" parent="UI/GameOverPanel"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = -10.0
theme_override_font_sizes/font_size = 32
text = "Game Over!"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI/GameOverPanel"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 40.0
text = "Restart"

[node name="TutorialButton" type="Button" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
text = "Tutorial"

[connection signal="timeout" from="StarSpawner" to="." method="_on_star_spawner_timeout"]
[connection signal="pressed" from="UI/GameOverPanel/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="UI/TutorialButton" to="." method="_on_tutorial_button_pressed"]
